--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pip install torch==1.5.0+cpu torchvision==0.6.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
+torch==1.5.0+cpu torchvision==0.6.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
 pyserial
 xlsxwriter
 xlrd
